[project]
name = "cp2k-basis"
dynamic = ["version"]
authors = [
    {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be"},
]
description = "Just a project to have an overview of the content of CP2K basis sets and potentials."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    'numpy',
    'h5py',
    'pyyaml',
    'requests',
    'Flask>=2.0',
    'Flask-Limiter',
    'webargs',
    'more-itertools',
    'diffpatch'
]

[project.scripts]
cb_fetch_data = "cp2k_basis.scripts.fetch_data:main"
cb_explore_library = "cp2k_basis.scripts.explore_library:main"
cb_explore_file = "cp2k_basis.scripts.explore_file:main"

[tool.setuptools]
packages = ['cp2k_basis', 'cp2k_basis.scripts']

[tool.setuptools.dynamic]
version = {attr = "cp2k_basis.__version__"}